--- a/Ex-01/index.html
+++ b/Ex-01/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Musikarkiv</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Musikarkiv</h1>
+    <div id="album-list"></div>
+    <script src="script.js"></script>
   </body>
 </html>
